Script: add utility functions to test input values

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
                 <p>Try it free 7 days then $20/mo. thereafter</p>
             </button>
             <form >
-                <div>
+                <div class="error">
                     <input 
-                    
                     type="text" 
                     placeholder="Username*"
                     id="username"
