Refactor: #HTML: change class error into success, #Style: add success & error class, #script: add an "error" element to display error message

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <p>Try it free 7 days then $20/mo. thereafter</p>
             </button>
             <form >
-                <div class="error">
+                <!-- <div class="error"> -->
+                <div class="success">
                     <input 
                     type="text" 
                     placeholder="Username*"
